--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -49,7 +49,7 @@
         }
     );
 </script>
-<h1>me.opencodespace.org/hyperlinks</h1>
+<h1>www.opencodespace.org/hyperlinks</h1>
 <main>
     <a href="index.html">My Webpage</a>
     <a rel="me" href="https://wetdry.world/@withoutwyatt">Fediverse</a>
