--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -42,7 +42,7 @@
                     links[links.length - 1].focus();
                 }
             } else if (event.key === 'e') {
-                window.open("https://github.com/wyattwas/website/hyperlinks.html", "_self");
+                window.open("https://github.com/wyattwas/personal-website/", "_self");
             } else if (event.key === 'c') {
                 window.open("https://matrix.to/#/@wyatt_was:matrix.org", "_self");
             }
